created response for product creation request and modified openapi
