# src/main/java/com/ulises/posverse/rest/api/impl/ProductsApiImpl.java
@@ -1,14 +1,16 @@
 package com.ulises.posverse.rest.api.impl;
 
 import com.ulises.posverse.common.mappers.ProductMapper;
-import com.ulises.posverse.domain.model.Product;
 import com.ulises.posverse.domain.services.ProductsService;
 import com.ulises.posverse.rest.api.ProductsApi;
 import com.ulises.posverse.rest.api.dto.requests.ProductCreationRequestDTO;
+import com.ulises.posverse.rest.api.dto.responses.ProductCreationResponseDTO;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.net.URI;
 
 @RestController
 @RequiredArgsConstructor
@@ -17,10 +19,14 @@ public class ProductsApiImpl implements ProductsApi {
     private final ProductMapper productMapper;
 
     @Override
-    public ResponseEntity<Product> createProduct(final ProductCreationRequestDTO productCreationRequestDTO) {
-        val product = this.productMapper.toModel(productCreationRequestDTO);
-        val savedProduct = this.productsService.saveProduct(product);
+    public ResponseEntity<ProductCreationResponseDTO> createProduct(final ProductCreationRequestDTO productCreationRequestDTO) {
+        val productToSave = this.productMapper.toModel(productCreationRequestDTO);
+        val savedProduct = this.productsService.saveProduct(productToSave);
+        val response = this.productMapper.toDto(savedProduct);
+        val uri = URI.create("/products/" + savedProduct.getId());
 
-        return ResponseEntity.ok(savedProduct);
+        return ResponseEntity
+                .created(uri)
+                .body(response);
     }
 }
